fix: auth on swagger
