# api/handlers/v1/providers_post_one.go
@@ -18,12 +18,14 @@ import (
 // @Tags			providers
 // @Accept			json
 // @Produce		json
-// @Param			body	body		v1Binding.PostProviderRequest	true	"Request body"
-// @Success		201		{object}	v1Response.Response
-// @Failure		400		{object}	v1Response.Response
-// @Failure		403		{object}	v1Response.Response
-// @Failure		409		{object}	v1Response.Response
-// @Failure		500		{object}	v1Response.Response
+// @Param			body	body	v1Binding.PostProviderRequest	true	"Request body"
+// @Security		BearerAuth
+// @Success		201	{object}	v1Response.Response
+// @Failure		400	{object}	v1Response.Response
+// @Failure		401	{object}	v1Response.Response
+// @Failure		403	{object}	v1Response.Response
+// @Failure		409	{object}	v1Response.Response
+// @Failure		500	{object}	v1Response.Response
 // @Router			/api/v1/providers [post]
 func (h *Handler) PostProvider(c echo.Context) error {
 	span := sentry.StartSpan(c.Request().Context(), "v1.PostProvider")
