# api/handlers/v1/scrape_put_chapter_detail.go
@@ -20,13 +20,15 @@ import (
 // @Tags			scrape-requests
 // @Accept			json
 // @Produce		json
-// @Param			body	body		v1Binding.PutScrapeChapterDetail	true	"Request body"
-// @Success		200		{object}	v1Response.Response
-// @Failure		400		{object}	v1Response.Response
-// @Failure		403		{object}	v1Response.Response
-// @Failure		404		{object}	v1Response.Response
-// @Failure		500		{object}	v1Response.Response
-// @Failure		503		{object}	v1Response.Response
+// @Param			body	body	v1Binding.PutScrapeChapterDetail	true	"Request body"
+// @Security		BearerAuth
+// @Success		200	{object}	v1Response.Response
+// @Failure		400	{object}	v1Response.Response
+// @Failure		401	{object}	v1Response.Response
+// @Failure		403	{object}	v1Response.Response
+// @Failure		404	{object}	v1Response.Response
+// @Failure		500	{object}	v1Response.Response
+// @Failure		503	{object}	v1Response.Response
 // @Router			/api/v1/scrape-requests/chapters/detail [put]
 func (h *Handler) PutScrapeChapterDetail(c echo.Context) error {
 	span := sentry.StartSpan(c.Request().Context(), "v1.PutScrapeChapterDetail")
