# api/handlers/v1/scrape_put_series_detail.go
@@ -20,13 +20,15 @@ import (
 // @Tags			scrape-requests
 // @Accept			json
 // @Produce		json
-// @Param			body	body		v1Binding.PutScrapeSeriesDetail	true	"Request body"
-// @Success		200		{object}	v1Response.Response
-// @Failure		400		{object}	v1Response.Response
-// @Failure		403		{object}	v1Response.Response
-// @Failure		404		{object}	v1Response.Response
-// @Failure		500		{object}	v1Response.Response
-// @Failure		503		{object}	v1Response.Response
+// @Param			body	body	v1Binding.PutScrapeSeriesDetail	true	"Request body"
+// @Security		BearerAuth
+// @Success		200	{object}	v1Response.Response
+// @Failure		400	{object}	v1Response.Response
+// @Failure		401	{object}	v1Response.Response
+// @Failure		403	{object}	v1Response.Response
+// @Failure		404	{object}	v1Response.Response
+// @Failure		500	{object}	v1Response.Response
+// @Failure		503	{object}	v1Response.Response
 // @Router			/api/v1/scrape-requests/series/detail [put]
 func (h *Handler) PutScrapeSeriesDetail(c echo.Context) error {
 	span := sentry.StartSpan(c.Request().Context(), "v1.PutScrapeSeriesDetail")
