# docs/swagger.json
@@ -3,10 +3,10 @@
     "info": {
         "description": "This is a Manga Scraper API server.",
         "title": "Manga Scraper API",
-        "termsOfService": "https://manga-scraper.fourleaves.studio/terms",
+        "termsOfService": "https://manga-scraper.hostinger.fourleaves.studio/terms",
         "contact": {
             "name": "API Support",
-            "url": "https://manga-scraper.fourleaves.studio/support",
+            "url": "https://manga-scraper.hostinger.fourleaves.studio/support",
             "email": "admin@fourleaves.studio"
         },
         "license": {
@@ -228,6 +228,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create provider",
                 "consumes": [
                     "application/json"
@@ -259,6 +264,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/v1Response.Response"
                         }
@@ -326,6 +337,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update provider",
                 "consumes": [
                     "application/json"
@@ -369,6 +385,12 @@
                             "$ref": "#/definitions/v1Response.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -392,6 +414,11 @@
         },
         "/api/v1/scrape-requests/chapters/detail": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create request to scrape chapter detail",
                 "consumes": [
                     "application/json"
@@ -427,6 +454,12 @@
                             "$ref": "#/definitions/v1Response.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -456,6 +489,11 @@
         },
         "/api/v1/scrape-requests/chapters/list": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create request to scrape chapter list",
                 "consumes": [
                     "application/json"
@@ -491,6 +529,12 @@
                             "$ref": "#/definitions/v1Response.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -520,6 +564,11 @@
         },
         "/api/v1/scrape-requests/series/detail": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create request to scrape series detail",
                 "consumes": [
                     "application/json"
@@ -555,6 +604,12 @@
                             "$ref": "#/definitions/v1Response.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -584,6 +639,11 @@
         },
         "/api/v1/scrape-requests/series/list": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create request to scrape series list",
                 "consumes": [
                     "application/json"
@@ -615,6 +675,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/v1Response.Response"
                         }
@@ -801,6 +867,43 @@
                     }
                 }
             }
+        },
+        "/api/v1/users/profile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get user profile",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1Response.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -953,6 +1056,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Only Admin can use this feature.\u003cbr /\u003eYou can get access token from '/api/v1/users/profile'\u003cbr /\u003eFill the value with \"Bearer\" followed by a space and Access Token",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
